docs/wiki/style.css
@media (width > 800px) {
#main {
    padding-left: 10vw;
    padding-right: 10vw;
}

#main img {
    max-width: 40vw;
}
}

:root {
    --theme-color: #01E6E6; 
}

* {
    font-family: Inter, Roboto, sans-serif;
}

body {
    background-color: #1D1D1E;
    color: white;
}

.sidebar,
nav > ul ul {
    background-color: rgb(24 24 26) !important;
    color: white;
}

.sidebar-toggle {
    background-color: rgb(24 24 26 / 0%) !important;
}

.sidebar nav {
    margin-bottom: 3rem;
    text-align: center;
}

.sidebar nav ul {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
    padding: 0;
}

.sidebar nav li {
    margin: 0;
}

.sidebar nav a {
    border: #134e4e 2px solid !important;
    padding: 5px;
}

#main {
    min-height: 100vh;
}

.markdown-section p,
.markdown-section span
.markdown-section em
{
    color: white
}

.markdown-section a {
    color: #64FF63;
    text-decoration: none;
}

.markdown-section code {
    background-color: #2e2e2e;
    font-family: monospace;
}

.markdown-section pre,
.markdown-section pre > code {
    background-color: #18181a !important;
    color: white;
    font-family: monospace;
}

.markdown-section .token {
    font-family: monospace;
}

.markdown-section strong {
    color: #01E6E6;
}

.sidebar ul li a,
.markdown-section h1,
.markdown-section h1 a,
.markdown-section h1 span,
.markdown-section h2,
.markdown-section h2 a,
.markdown-section h2 span,
.markdown-section h3,
.markdown-section h3 a,
.markdown-section h3 span,
.markdown-section h4,
.markdown-section h4 a,
.markdown-section h4 span,
.markdown-section h5,
.markdown-section h5 a,
.markdown-section h5 span,
.markdown-section h6,
.markdown-section h6 a,
.markdown-section h6 span {
    color: #17bebe;
}

.markdown-section tr {
    background-color: #1D1D1E !important;
}

.markdown-section th,
.markdown-section tr,
.markdown-section td {
    border: 2px solid #134e4e !important;
}

.callout {
    border-bottom: #18181a !important;
    border-right: #18181a !important;
    border-top: #18181a !important;
}

